# SessionLedger

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .qgate.toml  .vale.ini  AGENTS.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Makefile  PLAN.md  README.md  SECURITY.md  Taskfile.yml  WAVE36_LANE.md  WAVE37_LANE.md  WAVE38_LANE.md  WAVE39_SCOPE.md  WAVE40_SCOPE.md  WAVE41_SCOPE.md  WAVE42_SCOPE.md  WAVE43_SCOPE.md  WAVE44_SCOPE.md  WORK_DAG.md  deny.toml  justfile  llms.txt  mutants-baseline.json  process-compose.yaml  renovate.json  rust-toolchain.toml
.config/: nextest.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  user-friction.yml
.github/workflows/: a11y.yml  alloc-profile-hard.yml  bench-gate.yml  branch-protection.yml  ci.yml  commit-signing.yml  cross-platform-build.yml  cross-platform-smoke.yml  daemon-graph-hard.yml  envelope-crypto.yml  eval-compression.yml  feedback-budgets.yml  fuzz-blocking.yml  fuzz-cadence.yml  hermetic-builder.yml  hermetic.yml  jemalloc-default-on-hard.yml  jemalloc-hard.yml  load-macro-gate-hard.yml  loom-http-sse-soak-soft.yml  loom-permutation.yml  loom-smoke.yml  miri-permutation.yml  miri-smoke.yml  nightly-mutants.yml  ops-chaos-smoke.yml  ops-dashboards.yml  ops-gameday.yml  ops-load.yml  provenance-contract.yml  qgate.yml  race-smoke.yml  release.yml  reusable-hermetic-build.yml  rootless-matrix.yml  rootless-nonet.yml  security.yml  shuttle-permutation.yml  shuttle-soft.yml  signing-hard.yml  (+4 more)
adapters/: README.md
adapters/go/: go.mod  main.go  main_test.go
adapters/python/: okf_adapter.py
adapters/typescript/: okf_adapter.ts
agileplus/: README.md  seed.ps1
assets/: README-tokens.md  tokens.css
assets/brand/: README.md
assets/icons/: CHECKLIST.md
audit/: SCORECARD.md
audit/.lane-c00/: C00.md
audit/.lane-c01/: C01.md
audit/.lane-c02/: C02.md
audit/.lane-c03/: C03.md
audit/.lane-c04/: C04.md
audit/.lane-c05/: C05.md
audit/.lane-c06/: C06.md
audit/.lane-c07/: C07.md
audit/.lane-c08/: C08.md
audit/.lane-c09/: C09.md
audit/.lane-c10/: C10.md
audit/.lane-c11/: C11.md
benches/: pipeline.rs
ci/hermetic-builder/: Containerfile
compose/: pheno-compose.yaml
crates/sl-daemon/: Cargo.toml  Containerfile  README.md  process-compose.yaml
crates/sl-daemon/.config/: nextest.toml
crates/sl-daemon/completions/: _sl-daemon  sl-daemon.bash  sl-daemon.fish  sl-daemon.ps1
crates/sl-daemon/src/: archive.rs  audit.rs  banner.rs  cli.rs  discovery.rs  etl.rs  export.rs  filter.rs  http.rs  lib.rs  main.rs  metrics.rs  otel.rs  otel_metrics.rs  resilience.rs  resolver.rs  shutdown.rs  tag.rs  traceparent.rs  update_check.rs  validation.rs  watcher.rs  worker.rs
crates/sl-daemon/tests/: check_update.rs  completions.rs  integration.rs  pipeline.rs  sse_bridge.rs
crates/sl-viewer/: Cargo.toml  Dioxus.toml  README.md
crates/sl-viewer/src/: app.rs  async_states.rs  bundle_diff.rs  bundle_list.rs  cli_help.rs  command_palette.rs  corpus_cta.rs  corpus_loader.rs  daemon_url.rs  detail_pane.rs  fixture.rs  help_overlay.rs  history_tab.rs  lib.rs  live_feed.rs  main.rs  memory_tab.rs  mock_data.rs  replay_view.rs  search_view.rs  session_list.rs  session_transcript.rs  theme.rs  timeline.rs  tokens.rs  unfinished_tab.rs
crates/sl-viewer/tests/: lib_theme_export.rs
crates/sl-viewer/tests/fixtures/: forge_fixture.db
docs/: DESIGN.md  EVAL_SCOPE.md  HELP.md  OKF-ROUNDTRIP.md  SESSION_ARTIFACT_STANDARD.md  THREAT_MODEL.md  USER_JOURNEYS.md  VISUAL_SPEC.md  friction-log.md  functional_requirements.md  viewer-hotkeys.md
docs/a11y/: design-tokens.md  (+4 more)
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/jsonl_ingest/: two_sessions.jsonl
fuzz/corpus/okf_roundtrip/: minimal.json
fuzz/fuzz_targets/: jsonl_ingest.rs  okf_roundtrip.rs
locales/: en.ftl  en.json  es.ftl  es.json
mutants.out/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  unviable.txt
packaging/: Makefile  README.md  channels.md
scripts/: agileplus-sync.ps1  alert-route-ids-check.ps1  alertmanager-soft-check.ps1  alloc-profile-check.ps1  allocation-budget-check.ps1  assert-release-matrix.ps1  audit-review.ps1  bench-gate.ps1  branch-protection-check.ps1  brew-winget-publish-check.ps1  cargo-nonet-check.ps1  ci-timeout-check.ps1  commit-signing-check.ps1  continuous-profiling-agent.ps1  corpus-generate.py  cross-language-parity-check.ps1  crypto-inventory-check.ps1  cve-feed-check.ps1  daemon-graph-hard-check.ps1  dashboard-provision-check.ps1  design-tokens-check.ps1  edge-deploy-scope-check.ps1  env-example-check.ps1  envelope-crypto-check.ps1  eval-repro-check.ps1  feedback-budget-check.ps1  fill-packaging-checksums.ps1  flake-quarantine-apply.ps1  flake-rerun-stats.ps1  flake-tracker-check.ps1  fluent-i18n-check.ps1  fuzz-cadence-check.ps1  hermetic-check.ps1  hermetic-isolation-check.ps1  i18n-check.ps1  inclusive-language-check.ps1  install-sl-daemon-completions.ps1  install-sl-daemon-completions.sh  install.ps1  install.sh  (+48 more)
src/: envelope.rs  i18n.rs  i18n_fluent.rs  inject.rs  lib.rs  pii_redact.rs
target-w38-i18n-fluent/: .rustc_info.json
target-w38-use-gauges/: .rustc_info.json
tests/: alertmanager_soft.rs  alloc_profile.rs  alloc_profile_dhat.rs  alloc_profile_hard.rs  allocation_budget.rs  cargo_nonet.rs  commit_signing_check.rs  compression_eval.rs  continuous_profiling.rs  cross_language_parity.rs  crypto_inventory.rs  cve_feed.rs  daemon_graph_hard.rs  daemon_graph_tokio.rs  design_tokens.rs  edge_deploy_scope.rs  envelope_crypto.rs  eval_repro.rs  fluent_i18n.rs  fuzz_cadence.rs  i18n.rs  jemalloc_default_on.rs  jemalloc_hard.rs  jemalloc_soft.rs  load_macro_gate.rs  loom_http_sse_soak.rs  loom_model.rs  loom_permutation.rs  loom_soft.rs  maintainer_2fa.rs  mcp_scope.rs  memory_budget.rs  merge_recovery.rs  okf_golden.rs  okf_roundtrip.rs  otlp_metrics.rs  perf_budget.rs  pii_redact.rs  properties.rs  race_model.rs  (+21 more)
(+864 files in other folders)
