[workspace]
# sl-daemon is its own workspace root (see crates/sl-daemon/Cargo.toml) so it can
# resolve on macOS without sl-viewer's webkit2gtk-sys graph. It is excluded here.
members = ["crates/sl-viewer"]
exclude = ["crates/sl-daemon"]
resolver = "2"

[package]
name = "session-ledger"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Session ledger: compile/distill agent sessions into injectable continuation bundles (Acceptance/Contract/Context/Intent), crash-recovery + duplicate-chat merge + lost-work localization"
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/SessionLedger"
readme = "README.md"

[features]
# Enable reusable zstd compression adapters.
compress = ["dep:zstd"]
# Enable the rusqlite-backed Forge ingestion adapter and zstd decompression.
sqlite = ["dep:rusqlite", "compress"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha2 = "0.11"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
rusqlite = { version = "0.40", optional = true, features = ["bundled"] }
zstd = { version = "0.13", optional = true }
tracing = "0.1"

[dev-dependencies]
rusqlite = { version = "0.40", features = ["bundled"] }
zstd = { version = "0.13" }
tempfile = "3"
criterion = { version = "0.7.0", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "pipeline"
harness = false

# ---------------------------------------------------------------------------
# webkit2gtk-sys 2.0.1 was yanked from crates.io after 2.0.2 was published,
# but wry 0.45.0 (used by dioxus-desktop 0.6.x) pins exactly "=2.0.1".
# These local stubs satisfy the version constraint so cargo can resolve the
# dependency graph on macOS.  The stubs contain no symbols; both crates are
# cfg(target_os = "linux") inside wry and are never compiled on macOS.
[patch.crates-io]
webkit2gtk-sys = { path = "vendor/webkit2gtk-sys" }
webkit2gtk = { path = "vendor/webkit2gtk" }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
