[package]
name = "session-ledger-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
session-ledger = { path = ".." }

[[bin]]
name = "okf_roundtrip"
path = "fuzz_targets/okf_roundtrip.rs"
test = false
doc = false
bench = false

[workspace]
