[package]
name = "sl-daemon"
version = "0.1.0"
edition = "2021"
description = "SessionLedger daemon — watches session dirs, compiles sessions, exports OKF documents"
license = "MIT OR Apache-2.0"

[dependencies]
session-ledger = { path = "../.." }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "signal", "fs", "time"] }
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
flate2 = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "alloc"] }
# HTTP server (axum-based SSE bridge)
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }
futures-core = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
# CLI client (reqwest + SSE stream helpers)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
async-stream = "0.3"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

# Standalone workspace root: resolve sl-daemon independently of the parent
# workspace. The sibling `sl-viewer` crate pulls dioxus-desktop -> wry ->
# webkit2gtk-sys, which cannot resolve on macOS; isolating sl-daemon lets
# `cargo test -p sl-daemon` / `cargo build` work on macOS without being dragged
# into sl-viewer's platform-specific graph. The `session-ledger` path dep above
# still resolves via its relative path.
[workspace]
