[package]
name = "sl-viewer"
version = "0.1.0"
edition = "2021"
description = "Dioxus desktop+web viewer for SessionLedger compiled bundles"
license = "MIT OR Apache-2.0"

[dependencies]
session-ledger = { path = "../.." }
dioxus = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
web = ["dioxus/web"]

[lints.rust]
unsafe_code = "forbid"
