[package]
name = "sl-viewer"
version = "0.1.0"
edition = "2021"
description = "Dioxus desktop+web viewer for SessionLedger compiled bundles"
license = "MIT OR Apache-2.0"

[dependencies]
session-ledger = { path = "../.." }
dioxus = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# sqlite feature: wire real Forge corpus into the viewer
rusqlite = { version = "0.32", optional = true }
zstd = { version = "0.13", optional = true }

[dev-dependencies]
rusqlite = "0.32"
zstd = "0.13"
tempfile = "3"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
web = ["dioxus/web"]
# Enable loading real Forge SQLite sessions in the viewer.
# Requires: ZSTD_SYS_USE_PKG_CONFIG=1 (links against system libzstd).
sqlite = [
    "dep:rusqlite",
    "dep:zstd",
    "session-ledger/sqlite",
]

[lints.rust]
unsafe_code = "forbid"
