[package]
name = "sl-viewer"
version = "0.1.0"
edition = "2021"
description = "Dioxus desktop+web viewer for SessionLedger compiled bundles"
license = "MIT OR Apache-2.0"

[dependencies]
session-ledger = { path = "../.." }
dioxus = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "json"], default-features = false, optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
tokio-util = { version = "0.7", features = ["io"], optional = true }
futures-util = { version = "0.3", optional = true }
js-sys = { version = "0.3", optional = true }
chrono = { version = "0.4", features = ["clock"], default-features = false, optional = true }
# sqlite feature: wire real Forge corpus into the viewer
rusqlite = { version = "0.40", optional = true }
zstd = { version = "0.13", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = ["Document", "Element", "Event", "EventSource", "HtmlElement", "KeyboardEvent", "Location", "MessageEvent", "UrlSearchParams", "Window"] }

[dev-dependencies]
rusqlite = "0.40"
zstd = "0.13"
tempfile = "3"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop", "dep:reqwest", "dep:tokio", "dep:tokio-util", "dep:futures-util", "dep:chrono", "compressed-sessions"]
compressed-sessions = ["dep:zstd", "session-ledger/compress"]
web = ["dioxus/web", "dep:reqwest", "dep:futures-util", "dep:js-sys", "dep:wasm-bindgen", "dep:web-sys"]
# Enable loading real Forge SQLite sessions in the viewer.
# Requires: ZSTD_SYS_USE_PKG_CONFIG=1 (links against system libzstd).
sqlite = [
    "dep:rusqlite",
    "dep:zstd",
    "session-ledger/sqlite",
]

[lints.rust]
unsafe_code = "forbid"

[package.metadata.bundle]
# Lab-Coat visual identity (proposed 2026-07-06 by vision-pillar).
# Icon source of truth: ../../assets/brand/sessionledger-icon.svg.
name = "SessionLedger"
identifier = "ai.kooshapari.sessionledger"
icon = ["../../assets/icons/sessionledger.iconset"]
resources = []
category = "DeveloperTool"
short_description = "Session-bundle compiler + viewer"
long_description = "Hexagonal session-bundle compiler with Dioxus viewer for OKF streams."
